frontend/src/components/ReviewsComponent/reviewComponentStyle.css
.reviewComponent {
  padding: 0 0 100px 0;
}

.reviewDate {
  font-size: 14px;
  font-weight: bold;
  color: grey;
}

.reviewPanel {
  padding: 15px 0;
  box-sizing: border-box;
  border-bottom: 1px solid rgb(230, 230, 230);
}

.reviewsHeadDiv {
  margin: 10px 0 0 0;
}

.beFirstPtag {
  margin: 15px 0 0 0;
}

#submitReviewBtn:disabled {
  background-color: rgb(238, 238, 238);
  cursor: default;
  color: grey;
  border: 1px solid grey;
}

#reviewTextArea {
  width: 40vw;
  resize: none;
  padding: 10px;
  box-sizing: border-box;
}

.starsContainer {
  display: flex;
  padding: 25px 0 20px 0;
  justify-content: center;
  align-items: center;
}

.starsContainer .fa-regular {
  color: black;
}
.starsContainer .fa-solid {
  color: orange;
}

.starsContainer p {
  padding: 0 0 0 10px;
  font-weight: bold;
}
.starsContainer button {
  border: 0;
  background-color: white;
  box-shadow: none;
  width: auto;
}

